# PSN

./: .gitignore  .gitmodules  LICENSE  README.md  SKLEARN_API.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  publish.yml  test.yml
examples/: basic_usage.py  comprehensive_sklearn_demo.py  psn_demo.ipynb  sklearn_api_demo.py  sklearn_api_example.py  test_scoring_functions.py  unit_groups_demo.py
matlab/: README.md  psn.m  simulate.m  test_gsn_dependency.m  test_psn.m  visualization.m
matlab/tests/: test_allowable_best_among.m  test_psn_all_combinations.m
matlab/utilities/basis/: construct_basis.m  eigh_descending_sym.m  normalize_orthonormalize_basis.m  project_covs.m  use_cached_eigvecs.m
matlab/utilities/denoise/: compute_unit_weighted_projections.m  denoise_fullrank_wiener.m  denoise_global.m  denoise_unitwise.m
matlab/utilities/diagnostics/: attach_recovery_tradeoff.m  compute_signal_noise_diagnostics.m  split_half_r.m
matlab/utilities/input/: load_gsn_result.m  merge_structs.m  parse_inputs.m  set_default_options.m  validate_data.m  validate_gsn_result.m  validate_options.m
matlab/utilities/plotting/: cmapsign4.m  legend_behind.m  plot_data_diagnostic.m  plot_recovery_tradeoff.m  redblue.m  viridis_colormap.m  visualization.m  visualize_results.m
matlab/utilities/simulation/: adjust_alignment_gradient_descent.m  align_noise_basis_lowrank.m  coerce_true_signal.m  random_orthonormal_columns.m  shortcut_alignment.m  simulate_data.m
matlab/utilities/threshold/: allowable_candidates.m  argmax_allowable.m  constrain_to_allowable.m  first_reach_allowable.m  format_threshold.m  max_tradeoff_threshold.m  select_compare_basis.m  select_threshold_analytic.m
psn/: __init__.py  _device.py  _fast_gsn.py  psn.py  simulate.py  sklearn_api.py  utils.py  version.py  visualization.py
psn/utilities/: __init__.py
psn/utilities/basis/: __init__.py  construct_basis.py  eigh_descending_sym.py  normalize_orthonormalize_basis.py  project_covs.py  use_cached_eigvecs.py
psn/utilities/denoise/: __init__.py  compute_unit_weighted_projections.py  denoise_global.py  denoise_unitwise.py  denoise_wiener.py
psn/utilities/diagnostics/: __init__.py  compute_signal_noise_diagnostics.py  recovery_tradeoff.py  split_half.py  split_half_reliability.py
psn/utilities/input/: __init__.py  load_gsn_result.py  merge_dicts.py  parse_inputs.py  set_default_options.py  validate_data.py  validate_gsn_result.py  validate_options.py
tests/: run_single_equivalence_test.sh  test_allowable_best_among.py  test_basis_ranking.py  test_device_path.py  test_fast_gsn.py  test_fast_psn.py  test_gsn_eigenbasis_handoff.py  test_gsn_result_file_input.py  test_matlab_setup.m  test_performgsn.py  test_plotting_functionality.py  test_psn_all_combinations.py  test_psn_alpha.py  test_psn_comprehensive_coverage.py  test_psn_edge_cases.py  test_psn_edge_cases_comprehensive.py  test_psn_functional_api.py  test_psn_gsn_cache.py  test_psn_hyperparams.py  test_psn_ica.py  test_psn_matlab_python_equivalence.sh  test_psn_numerical_stability.py  test_psn_sklearn.py  test_random_basis_only.sh  test_recovery_tradeoff_singular.py  test_select_threshold_wiring.py  test_simulate_data.py  test_sklearn_api.py  test_sklearn_extended.py  test_truncate.py  test_unit_groups.py  test_unit_mean_consistency.py
(+16 files in other folders)
