[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "psn"
version = "0.1.0"
description = "Partitioning Signal and Noise"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Jacob S. Prince", email = "jacob.samuel.prince@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "scipy>=1.7.0", 
    "matplotlib>=3.3.0",
    "scikit-learn",
    "GSN @ git+https://github.com/cvnlab/GSN.git"
]

[project.urls]
Homepage = "https://github.com/jacob-prince/PSN"
Repository = "https://github.com/jacob-prince/PSN"
Documentation = "https://github.com/jacob-prince/PSN"

[tool.setuptools.packages.find]
where = ["."]
include = ["psn*"]

[tool.ruff]
# Increase the maximum line length to 100 characters (more lenient than black's default 88)
line-length = 100

# Exclude common directories
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".venv",
    ".pytest_cache",
]

[tool.ruff.lint]
# Select a more lenient set of rules
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings  
    "F",    # Pyflakes
    "I",    # isort
]

# Ignore some common issues to be more lenient
ignore = [
    "E501",  # Line too long (handled by line-length setting)
    "E203",  # Whitespace before ':'
    "E402",  # Module level import not at top of file
    "F841",  # Local variable assigned but never used
    "W293",  # Blank line contains whitespace
    "E741",  # Ambiguous variable name
    "W291",  # Trailing whitespace
]

[tool.ruff.lint.per-file-ignores]
# Allow unused imports in __init__.py files
"__init__.py" = ["F401"]